fix scroll up color in dark mode

--- a/css/index.sass
+++ b/css/index.sass
@@ -178,6 +178,8 @@ body.dark
         background-color: #52525b
         .footer-col-wrapper
             color: #fff !important
+    .scroll-up
+        color: $dark-color
 
 // rules when the burger menu is shown
 @media screen and (max-width: 600px)
